asdl/src/snapshots/tests__attributes_syntax.snap
---
created: "2019-08-23T11:43:53.303056243Z"
creator: insta@0.8.1
source: asdl/src/lib.rs
expression: root
---
Root {
    types: [
        SumType(
            SumType {
                type_id: TypeId(
                    "stm",
                ),
                constructors: [
                    Constr {
                        id: ConstrId(
                            "Compound",
                        ),
                        fields: [
                            Required(
                                Required {
                                    type_id: TypeId(
                                        "stm",
                                    ),
                                    id: Some(
                                        Id(
                                            "s1",
                                        ),
                                    ),
                                },
                            ),
                            Repeated(
                                Repeated {
                                    type_id: TypeId(
                                        "stm",
                                    ),
                                    id: Some(
                                        Id(
                                            "s2",
                                        ),
                                    ),
                                },
                            ),
                        ],
                    },
                    Constr {
                        id: ConstrId(
                            "Single",
                        ),
                        fields: [
                            Required(
                                Required {
                                    type_id: TypeId(
                                        "stm",
                                    ),
                                    id: None,
                                },
                            ),
                        ],
                    },
                ],
                attrs: Some(
                    Attrs {
                        fields: [
                            Optional(
                                Optional {
                                    type_id: TypeId(
                                        "prodType",
                                    ),
                                    id: None,
                                },
                            ),
                        ],
                    },
                ),
            },
        ),
        ProdType(
            ProdType {
                type_id: TypeId(
                    "prodType",
                ),
                fields: [
                    Required(
                        Required {
                            type_id: TypeId(
                                "stm",
                            ),
                            id: Some(
                                Id(
                                    "s1",
                                ),
                            ),
                        },
                    ),
                ],
            },
        ),
    ],
}
