asdl/src/snapshots/tests__parse_empty_asdl.snap
---
created: "2019-09-09T12:04:49.724846644Z"
creator: insta@0.8.1
source: asdl/src/parser.rs
expression: parse(asdl)
---
Ok(
    (
        "",
        Root {
            types: [],
            comments: [],
        },
    ),
)
