asdl/src/snapshots/tests__parse_prod_type.snap
---
created: "2019-09-09T12:04:49.724867541Z"
creator: insta@0.8.1
source: asdl/src/parser.rs
expression: prod_type(asdl)
---
Ok(
    (
        "",
        ProdType {
            type_id: TypeId(
                "prodType",
            ),
            fields: [
                Required(
                    Required {
                        type_id: TypeId(
                            "type1",
                        ),
                        id: None,
                    },
                ),
                Optional(
                    Optional {
                        type_id: TypeId(
                            "type2",
                        ),
                        id: Some(
                            Id(
                                "name",
                            ),
                        ),
                    },
                ),
            ],
            comments: [
                "prodType comment line 1",
                "prodType comment line 2",
            ],
        },
    ),
)
