asdl/src/snapshots/tests__simple_successful_test_syntax.snap
---
created: "2019-08-23T11:43:53.303146876Z"
creator: insta@0.8.1
source: asdl/src/lib.rs
expression: root
---
Root {
    types: [
        SumType(
            SumType {
                type_id: TypeId(
                    "stm",
                ),
                constructors: [
                    Constr {
                        id: ConstrId(
                            "Compound",
                        ),
                        fields: [
                            Required(
                                Required {
                                    type_id: TypeId(
                                        "stm",
                                    ),
                                    id: Some(
                                        Id(
                                            "s1",
                                        ),
                                    ),
                                },
                            ),
                            Repeated(
                                Repeated {
                                    type_id: TypeId(
                                        "stm",
                                    ),
                                    id: Some(
                                        Id(
                                            "s2",
                                        ),
                                    ),
                                },
                            ),
                        ],
                    },
                    Constr {
                        id: ConstrId(
                            "Single",
                        ),
                        fields: [
                            Required(
                                Required {
                                    type_id: TypeId(
                                        "stm",
                                    ),
                                    id: None,
                                },
                            ),
                        ],
                    },
                ],
                attrs: None,
            },
        ),
        SumType(
            SumType {
                type_id: TypeId(
                    "noFileds",
                ),
                constructors: [
                    Constr {
                        id: ConstrId(
                            "One",
                        ),
                        fields: [],
                    },
                    Constr {
                        id: ConstrId(
                            "Two",
                        ),
                        fields: [],
                    },
                    Constr {
                        id: ConstrId(
                            "Three",
                        ),
                        fields: [],
                    },
                ],
                attrs: None,
            },
        ),
        ProdType(
            ProdType {
                type_id: TypeId(
                    "prodType",
                ),
                fields: [
                    Optional(
                        Optional {
                            type_id: TypeId(
                                "noFileds",
                            ),
                            id: Some(
                                Id(
                                    "f",
                                ),
                            ),
                        },
                    ),
                    Required(
                        Required {
                            type_id: TypeId(
                                "stm",
                            ),
                            id: Some(
                                Id(
                                    "s1",
                                ),
                            ),
                        },
                    ),
                ],
            },
        ),
    ],
}
